--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "graphql-tag": "^2.12.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.12",
     "typescript": "^4.2.4",
